--- a/index.html
+++ b/index.html
@@ -13,7 +13,38 @@
   <![endif]-->
 </head>
 
-<body>
-  <h1>My Resume</h1>
-</body>
+  <body>
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+    
+  
+    <section class="showcase">
+      <img src="">
+      <h1>Alberto Rodriguez - Full Stack Web Developer</h1>
+    </section>
+
+    <section class="intro">
+      <h3>About Me</h3>
+      <p>My name is Alberto Rodriguez Jr</p>
+    </section>
+
+    <section class="skills">
+
+    </section>
+
+    <section class="workHistory">
+
+    </section>
+
+    <section class="contact">
+
+    </section>
+  </body>
+
 </html>
