--- a/index.html
+++ b/index.html
@@ -29,17 +29,37 @@
       <h1>Alberto Rodriguez - Full Stack Web Developer</h1>
     </section>
 
-    <section class="intro">
-      <h3>About Me</h3>
-      <p>My name is Alberto Rodriguez Jr</p>
-    </section>
-
-    <section class="skills">
-
-    </section>
+    <div class="aboutMe">
+        <section class="intro">
+            <h3>About Me</h3>
+            <p>My name is Alberto Rodriguez Jr, I am a fulstack web developer currently studying at <a href="">Lambda</a>.</p>
+          </section>
+      
+          <section class="skills">
+            <h3>Things I'm good at</h3>
+            <ul>
+              <li>CSS</li>
+              <li>HTML</li>
+              <li>Boxing</li>
+              <li>Learnig</li>
+            </ul>
+          </section>
+    </div>
+    
 
     <section class="workHistory">
-
+      <table>
+        <tr>
+          <th>Years</th>
+          <th>Company</th>
+          <th>Title</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Lambda</td>
+          <td>Student</td>
+        </tr>
+      </table>
     </section>
 
     <section class="contact">
