added the contact info and made changes to the style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Portfolio</a>
-        <a href="#">Contact</a>
+        <a href="contact">Contact</a>
       </nav>
     </header>
     
@@ -63,9 +63,15 @@
         </tr>
       </table>
     </section>
-
+  
     <section class="contact">
-
+      <div>
+          email:<a href="#">junior.rodriguez@icloud.com</a>
+      </div>
+      <div>
+          phone:<a href="#">(515)770-1103</a>
+      </div>
+      
     </section>
   </body>
 
